Added APT29 evaluation results

--- a/default/inputs.conf
+++ b/default/inputs.conf
@@ -1,3 +1,5 @@
+####### APT3 ########
+
 [monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round1/round1_CarbonBlack.log]
 index = main
 sourcetype = attackeval:json
@@ -57,4 +59,153 @@ index = main
 sourcetype = attackeval:json
 host = SentinelOne
 disabled = 0
+
+####### APT29 ########
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round2/Bitdefender.1.APT29.1_Results.log]
+index = main
+sourcetype = attackeval:json
+host = Bitdefender
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round2/CrowdStrike.1.APT29.1_Results.log]
+index = main
+sourcetype = attackeval:json
+host = CrowdStrike
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round2/Cybereason.1.APT29.1_Results.log]
+index = main
+sourcetype = attackeval:json
+host = Cybereason
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round2/Cycraft.1.APT29.1_Results.log]
+index = main
+sourcetype = attackeval:json
+host = Cycraft
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round2/Cylance.1.APT29.1_Results.log]
+index = main
+sourcetype = attackeval:json
+host = Cylance
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round2/Elastic.1.APT29.1_Results.log]
+index = main
+sourcetype = attackeval:json
+host = Elastic
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round2/F-Secure.1.APT29.1_Results.log]
+index = main
+sourcetype = attackeval:json
+host = F-Secure
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round2/FireEye.1.APT29.1_Results.log]
+index = main
+sourcetype = attackeval:json
+host = FireEye
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round2/GoSecure.1.APT29.1_Results.log]
+index = main
+sourcetype = attackeval:json
+host = GoSecure
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round2/HanSight.1.APT29.1_Results.log]
+index = main
+sourcetype = attackeval:json
+host = HanSight
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round2/Kaspersky.1.APT29.1_Results.log]
+index = main
+sourcetype = attackeval:json
+host = Kaspersky
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round2/Malwarebytes.1.APT29.1_Results.log]
+index = main
+sourcetype = attackeval:json
+host = Malwarebytes
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round2/McAfee.1.APT29.1_Results.log]
+index = main
+sourcetype = attackeval:json
+host = McAfee
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round2/Microsoft.1.APT29.1_Results.log]
+index = main
+sourcetype = attackeval:json
+host = Microsoft
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round2/PaloAltoNetworks.1.APT29.1_Results.log]
+index = main
+sourcetype = attackeval:json
+host = PaloAltoNetworks
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round2/ReaQta.1.APT29.1_Results.log]
+index = main
+sourcetype = attackeval:json
+host = ReaQta
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round2/Secureworks.1.APT29.1_Results.log]
+index = main
+sourcetype = attackeval:json
+host = Secureworks
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round2/SentinelOne.1.APT29.1_Results.log]
+index = main
+sourcetype = attackeval:json
+host = SentinelOne
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round2/Symantec.1.APT29.1_Results.log]
+index = main
+sourcetype = attackeval:json
+host = Symantec
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round2/TrendMicro.1.APT29.1_Results.log]
+index = main
+sourcetype = attackeval:json
+host = TrendMicro
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round2/VMware.1.APT29.1_Results.log]
+index = main
+sourcetype = attackeval:json
+host = VMware
+disabled = 0
+crcSalt = <SOURCE>
 
