Added Carbanak+FIN7 evaluation results

--- a/default/app.conf
+++ b/default/app.conf
@@ -4,6 +4,7 @@
 
 [install]
 is_configured = 0
+install_source_checksum = e8fd982155204a60026427c388cf6271483161df
 
 [ui]
 is_visible = 1
@@ -11,7 +12,7 @@ label = EDR evaluations
 
 [launcher]
 author = Jorrit Folmer
-version = 1.0.0
+version = 1.2.0
 description = Compare Endpoint Detection and Response solutions based on MITRE ATT&CK evaluation round(s).
 
 [package]
