--- a/default/inputs.conf
+++ b/default/inputs.conf
@@ -209,3 +209,212 @@ host = VMware
 disabled = 0
 crcSalt = <SOURCE>
 
+####### Carbanak+FIN7 ########
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round3/AhnLab_Results.log]
+index = main
+sourcetype = attackeval:json
+host = Ahnlab
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round3/Bitdefender_Results.log]
+index = main
+sourcetype = attackeval:json
+host = Bitdefender
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round3/CheckPoint_Results.log]
+index = main
+sourcetype = attackeval:json
+host = Checkpoint
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round3/Cisco_Results.log]
+index = main
+sourcetype = attackeval:json
+host = Cisco
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round3/CrowdStrike_Results.log]
+index = main
+sourcetype = attackeval:json
+host = CrowdStrike
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round3/CyCraft_Results.log]
+index = main
+sourcetype = attackeval:json
+host = Cycraft
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round3/Cybereason_Results.log]
+index = main
+sourcetype = attackeval:json
+host = Cybereason
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round3/Cylance_Results.log]
+index = main
+sourcetype = attackeval:json
+host = Cylance
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round3/Cynet_Results.log]
+index = main
+sourcetype = attackeval:json
+host = Cynet
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round3/ESET_Results.log]
+index = main
+sourcetype = attackeval:json
+host = ESET
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round3/Elastic_Results.log]
+index = main
+sourcetype = attackeval:json
+host = Elastic
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round3/F-Secure_Results.log]
+index = main
+sourcetype = attackeval:json
+host = F-Secure
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round3/Fidelis_Results.log]
+index = main
+sourcetype = attackeval:json
+host = Fidelis
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round3/FireEye_Results.log]
+index = main
+sourcetype = attackeval:json
+host = FireEye
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round3/Fortinet_Results.log]
+index = main
+sourcetype = attackeval:json
+host = Fortinet
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round3/GoSecure_Results.log]
+index = main
+sourcetype = attackeval:json
+host = GoSecure
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round3/Malwarebytes_Results.log]
+index = main
+sourcetype = attackeval:json
+host = Malwarebytes
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round3/McAfee_Results.log]
+index = main
+sourcetype = attackeval:json
+host = McAfee
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round3/MicroFocus_Results.log]
+index = main
+sourcetype = attackeval:json
+host = MicroFocus
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round3/Microsoft_Results.log]
+index = main
+sourcetype = attackeval:json
+host = Microsoft
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round3/OpenText_Results.log]
+index = main
+sourcetype = attackeval:json
+host = OpenText
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round3/PaloAltoNetworks_Results.log]
+index = main
+sourcetype = attackeval:json
+host = PaloAltoNetworks
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round3/ReaQta_Results.log]
+index = main
+sourcetype = attackeval:json
+host = ReaQta
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round3/SentinelOne_Results.log]
+index = main
+sourcetype = attackeval:json
+host = SentinelOne
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round3/Sophos_Results.log]
+index = main
+sourcetype = attackeval:json
+host = Sophos
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round3/Symantec_Results.log]
+index = main
+sourcetype = attackeval:json
+host = Symantec
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round3/TrendMicro_Results.log]
+index = main
+sourcetype = attackeval:json
+host = TrendMicro
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round3/Uptycs_Results.log]
+index = main
+sourcetype = attackeval:json
+host = Uptycs
+disabled = 0
+crcSalt = <SOURCE>
+
+[monitor://$SPLUNK_HOME/etc/apps/EDRevals/default/data/round3/VMware_Results.log]
+index = main
+sourcetype = attackeval:json
+host = VMware
+disabled = 0
+crcSalt = <SOURCE>
+
+
+
+
+
